# quick-stack

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain.toml
src/: args.rs  errors.rs  lib.rs  main.rs
src/commands/: add.rs  clear.rs  edit.rs  ls.rs  mod.rs  parse.rs  rm.rs  sort.rs
