[package]
name = "quick-stack"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
better-panic = "0.3.0"
clap = { version = "4.5.4", features = ["cargo"] }
colored = "2.1.0"
regex = "1.10.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xdg = "2.5.2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
